# FbxUdimUnpack

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  UdimUnpack.cpp  UdimUnpack.h
CMake/: FindFBX.cmake
tools/: auto-udim-unpack.ps1
